# mainframe

./: CMakeLists.txt  README.md  package.xml
config/: four_susp_config.yaml  sim_rover_config.yaml  six_susp_config.yaml
launch/: auto_test.launch  drive_test.world  four_susp.launch  rocky2.world  six_susp.launch  six_susp.world  stateman.launch  system.launch
meshes/: base_link.STL  bleg_l.STL  bleg_r.STL  bmem_l.STL  bmem_r.STL  bsteer_l.STL  bsteer_r.STL  bwheel_l.STL  bwheel_r.STL  fleg_l.STL  fleg_r.STL  fmem_l.STL  fmem_r.STL  fsteer_l.STL  fsteer_r.STL  fwheel_l.STL
msg/: RawControl.msg
src/: controls.cpp  overlord.cpp  sim_rover.cpp  stateman.cpp  vert_wb.cpp
urdf/: four_susp.urdf  sim_rover_1.urdf  six_susp.urdf
