<?xml version="1.0"?>
<package>
  <name>mainframe</name>
  <version>0.0.0</version>
  <description>The mainframe! This package has all the ingredients for a Mars rover base control station.</description>

  <maintainer email="bensteer0@gmail.com">Benjamin Steer</maintainer>
  <author email="bensteer0@gmail.com">Benjamin Steer</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>

</package>
